# Test

./: .gitignore  README.md  Test.code-workspace
AdventofCode23/: 1.py  2.py  3.py  4.py
password-manager/: package-lock.json  package.json
password-manager/src-tauri/: tauri.conf.json
rust_test/: Cargo.toml  README.md
rust_test/src/: cli.rs  main.rs  password_manager.rs
