[package]
name = "rust_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aead = "0.5.2"
aes-gcm = "0.10.2"
clap = { version = "4.3.19", features = ["derive"] }
generic-array = "0.14.7"
pbkdf2 = "0.12.2"
rand = "0.8.5"
serde = { version = "1.0.175", features = ["derive"] }
sha2 = "0.10.7"
