[package]
name = "rust_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aead = "0.5.2"
aes-gcm = "0.10.2"
argon2 = "0.5.1"
chrono = "0.4.26"
clap = { version = "4.3.19", features = ["derive"] }
clap-repl = "0.1.0"
console = "0.15.7"
generic-array = "0.14.7"
rand = "0.8.5"
rand_core = "0.6.4"
rpassword = "7.2.0"
rustyline = "12.0.0"
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.104"
sha2 = "0.10.7"
sha3 = "0.10.8"
typenum = "1.16.0"
uuid = { version = "1.4.1", features = ["v4", "fast-rng"]}
